--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,35 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./partials/header.ejs") %> 
-<body class="dark-theme">
-
+  <%- include("./partials/header.ejs") %>
+  <body class="dark-theme">
     <div class="flex items-center justify-center h-screen">
-        <div class="w-full max-w-md">
-            <form class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                <h2 class="text-3xl font-bold mb-6 text-center">Register</h2>
-                <div class="mb-4">
-                    <label class="block text-sm font-bold mb-2" for="username">Username</label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-sm font-bold mb-2" for="email">Email</label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email">
-                </div>
-                <div class="mb-6">
-                    <label class="block text-sm font-bold mb-2" for="password">Password</label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
-                </div>
-                <div class="flex items-center justify-between">
-                    <button class="btn-purple text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                        Register
-                    </button>
-                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="login">
-                        Already have an account?
-                    </a>
-                </div>
-            </form>
-        </div>
+      <div class="w-full max-w-md">
+        <form
+          class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4"
+          id="form"
+        >
+          <h2 class="text-3xl font-bold mb-6 text-center">Register</h2>
+          <div class="mb-4">
+            <label class="block text-sm font-bold mb-2" for="username"
+              >Username</label
+            >
+            <input
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="username"
+              type="text"
+              placeholder="Username"
+              name="username"
+              required
+            />
+          </div>
+          <div class="mb-4">
+            <label class="block text-sm font-bold mb-2" for="email"
+              >Email</label
+            >
+            <input
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="email"
+              type="email"
+              name="email"
+              placeholder="Email"
+              required
+            />
+          </div>
+          <div class="mb-6">
+            <label class="block text-sm font-bold mb-2" for="password"
+              >Password</label
+            >
+            <input
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+              id="password"
+              type="password"
+              name="password"
+              placeholder="******************"
+              required
+            />
+          </div>
+          <p class="mb-4 text-red-600 font-bold" id="errors"></p>
+          <div class="flex items-center justify-between">
+            <button
+              class="btn-purple text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+              type="submit"
+              id="submitBtn"
+            >
+              Register
+            </button>
+            <a
+              class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
+              href="login"
+            >
+              Already have an account?
+            </a>
+          </div>
+        </form>
+      </div>
     </div>
+  </body>
 
-</body>
+  <script>
+    const form = document.getElementById("form");
+    const errors = document.getElementById("errors");
+    form.addEventListener("submit", async (event) => {
+      event.preventDefault();
+      errors.textContent = "";
+      const formData = new FormData(form);
+      const data = {};
+      formData.forEach((value, key) => {
+        data[key] = value;
+      });
+
+      // submit data
+      const response = await fetch("/auth/register", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(data),
+      });
+      const result = await response.json();
+      console.log(result);
+
+      if (result.errors) {
+        errors.textContent = "Registration Failed!";
+        console.log(formData);
+
+        console.log(result.errors);
+      } else {
+        showToast(`Registration complete! Now you can login.`, 1000); 
+
+        setTimeout(() => {
+          location.href = "login";
+        }, 1000);
+      }
+    });
+  </script>
 </html>
