--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,18 +4,19 @@
 <body class="dark-theme">
     <div class="flex items-center justify-center h-screen">
         <div class="w-full max-w-md">
-            <form class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+            <form class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4" id="form" >
                 <h2 class="text-3xl font-bold mb-6 text-center">Login</h2>
                 <div class="mb-4">
                     <label class="block text-sm font-bold mb-2" for="username">Username</label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username" name="username">
                 </div>
                 <div class="mb-6">
                     <label class="block text-sm font-bold mb-2" for="password">Password</label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************" name="password">
                 </div>
+                        <p class="mb-4 text-red-800 font-semibold" id="errors"></p>
                 <div class="flex items-center justify-between">
-                    <button class="btn-purple text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                    <button class="btn-purple text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
                         Login
                     </button>
                     <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="register">
@@ -25,5 +26,50 @@
             </form>
         </div>
     </div>
+     <script>
+    const form = document.getElementById("form");
+    let errors = document.getElementById("errors");
+    form.addEventListener("submit", async (event) => {
+      event.preventDefault();
+      errors.innerHTML = "";
+      const formData = new FormData(form);
+      const data = {};
+      formData.forEach((value, key) => {
+        data[key] = value;
+      });
+
+      // submit data
+      const response = await fetch("/auth/login", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(data),
+      });
+      const result = await response.json();
+
+      if (result.errors) {
+        let ERROR ="";
+        if (result.errors.username ) {
+          ERROR += result.errors.username.msg + "<br/>";
+        }
+        
+        if (result.errors.password) {
+          ERROR += result.errors.password.msg + "<br/>";
+        }
+         if (result.errors.common) {
+          ERROR += result.errors.common.msg + "<br/>";
+        }
+        errors.innerHTML = ERROR
+    
+      } else {
+        showToast(`Login Completed!`, 1000);
+
+        setTimeout(() => {
+          location.href = "/";
+        }, 1000);
+      }
+    });
+  </script>
 </body>
 </html>
