--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,56 +101,56 @@
               .map(
                 (note) => `
                <div class="bg-gray-900 p-6 rounded-lg shadow-lg transition-transform transform hover:scale-105">
-  <h2 class="text-xl font-extrabold text-white mb-2">
-    ${note.title}
-  </h2>
-  <p
-    id="note-description-${note._id}"
-    data-full-description="${escapeQuotes(note.description)}"
-    class="text-gray-300 leading-relaxed"
-  >
-    ${
-      note.description.length > 100
-        ? note.description.slice(0, 100) +
-          `... <a class="cursor-pointer text-blue-400 hover:text-blue-600 font-semibold" onClick="shortDescription('${note._id}')">Read More</a>`
-        : note.description
-    }
-  </p>
-  <div class="flex justify-between items-center mt-6">
-    <div class="flex space-x-4">
-      <button
-        class="text-purple-500 hover:text-purple-700 transition-colors"
-        title="Edit"
-        onclick="window.location.href='/edit-note/${note._id}'"
-      >
-        <i class="fas fa-pencil-alt text-lg"></i>
-      </button>
-      <button
-        class="text-red-500 hover:text-red-700 transition-colors"
-        title="Delete"
-        onClick="deleteNote('${note._id}')"
-      >
-        <i class="fas fa-trash text-lg"></i>
-      </button>
-      <button
-        class="text-green-500 hover:text-green-700 transition-colors"
-        title="Complete"
-      >
-        <i class="${
-          note.completed ? "fas fa-check-circle" : "far fa-circle"
-        } text-lg"></i>
-      </button>
-      <button
-        class="text-yellow-500 hover:text-yellow-700 transition-colors"
-        title="Favorite"
-      >
-        <i class="${note.favorite ? "fas fa-star" : "far fa-star"} text-lg"></i>
-      </button>
-    </div>
-  </div>
-</div>
-
-            `
+              <h2 class="text-xl font-extrabold text-white mb-2">
+              ${note.title}
+              </h2>
+              <p
+                id="note-description-${note._id}"
+                data-full-description="${escapeQuotes(note.description)}"
+                class="text-gray-300 leading-relaxed"
+              >
+            ${
+              note.description.length > 100
+                ? note.description.slice(0, 100) +
+                  `... <a class="cursor-pointer text-blue-400 hover:text-blue-600 font-semibold" onClick="shortDescription('${note._id}')">Read More</a>`
+                : note.description
+            }
+              </p>
+              <div class="flex justify-between items-center mt-6">
+                <div class="flex space-x-4">
+                  <button
+                    class="text-purple-500 hover:text-purple-700 transition-colors"
+                    title="Edit"
+                    onclick="window.location.href='/edit-note/${note._id}'"
+                  >
+                    <i class="fas fa-pencil-alt text-lg"></i>
+                  </button>
+                  <button
+                    class="text-red-500 hover:text-red-700 transition-colors"
+                    title="Delete"
+                    onClick="deleteNote('${note._id}')"
+                  >
+                    <i class="fas fa-trash text-lg"></i>
+                  </button>
+                  <button
+                    class="text-green-500 hover:text-green-700 transition-colors"
+                    title="Complete"
+                  >
+                    <i class="${
+                      note.completed ? "fas fa-check-circle" : "far fa-circle"
+                    } text-lg"></i>
+                  </button>
+                  <button
+                    class="text-yellow-500 hover:text-yellow-700 transition-colors"
+                    title="Favorite"
+                  >
+                    <i class="${
+                      note.favorite ? "fas fa-star" : "far fa-star"
+                    } text-lg"></i>
+                  </button>
+                </div>
+              </div>
+            </div>`
               )
               .join("");
           }
